Preserve spaces while splitting by sentence boundaries

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,7 @@ Style/StringLiterals:
 
 Style/ClassAndModuleChildren:
   EnforcedStyle: compact
+
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*
